--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,14 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "django-allauth>=0.57.0",
     "django-extensions>=3.2.3",
+    "django-bulma>=0.8.3",
+    "setuptools>=68.2.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "AGPL"}
 
+[tool.pdm.dev-dependencies]
+dev = [
+    "ipython>=8.16.1",
+]
