--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "setuptools>=68.2.2",
     "pydantic>=2.4.2",
     "gunicorn>=21.2.0",
+    "whitenoise>=6.6.0",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
