--- a/static/bulma/sass/package.json
+++ b/static/bulma/sass/package.json
@@ -6,14 +6,15 @@
   },
   "description": "Bulma for Django",
   "dependencies": {
-    "bulma": "^0.9.3"
+    "bulma": "^0.9.3",
+    "bulma-block-list": "^0.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.8.0",
     "clean-css-cli": "^4.3.0",
-    "sass": "^1.69.3",
     "postcss-cli": "^7.1.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sass": "^1.69.3"
   },
   "license": "MIT",
   "main": "style.sass",
@@ -24,7 +25,7 @@
     "build-autoprefix": "postcss --use autoprefixer --map false --output ../css/style.css ../css/style.css",
     "build-cleancss": "cleancss -o ../css/style.min.css ../css/style.css",
     "build-clean": "rimraf css",
-    "build-sass": "sass  --source-map style.sass ../css/style.css",
+    "build-sass": "sass  --source-map style.scss ../css/style.css",
     "deploy": "npm run build",
     "start": "npm run build-sass -- --watch"
   }
