--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "django>=4.2.6",
     "spotipy>=2.23.0",
     "python-dotenv>=1.0.0",
-    "django-allauth>=0.57.0",
+    "django-allauth==0.57.0",
     "django-extensions>=3.2.3",
     "django-bulma>=0.8.3",
     "setuptools>=68.2.2",
